[#noissue] Fix the broken layout in case of different locale

--- a/web/src/main/webapp/styles/navbar.css
+++ b/web/src/main/webapp/styles/navbar.css
@@ -55,7 +55,7 @@
 #ui-datepicker-div {
     top: 40px;
     left: 536px;
-    width: 404px;
+    width: 425px;
     border: 1px solid #DDD;
     display:none;
     padding: 4px 2px;
